#61. Created an enpoint to delete events
